src/test/deca/context/invalid/BadComparaison.deca
{
    int a = 100;
    float b = 100f;
    if (a != b){
        print("a et b sont differents");
    }
}